# NLP_chatbot

./: .gitignore  README.md  chatbot.py  class.pkl  functions.py  generate.py  pyproject.toml  requirements.txt  teste.py  testebot.py
ensaios/: ensaio_0.md  ensaio_1.md  ensaio_2.md  ensaio_3.md  ensaio_4.md  ensaio_5.md
essays/: essay_0.md  essay_1.md  essay_2.md  essay_3.md  essay_4.md  essay_5.md
model/notebooks/: mood-classifier.ipynb
model/notebooks/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/notebooks/model/variables/: variables.data-00000-of-00001  variables.index
utils/: functions.py  prettify.py
